--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,18 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #87ceeb;
-  --foreground: #34495e;
-}
-
 html,
 body {
   margin: 0;
   padding: 0;
   width: 100%;
-  overflow-x: hidden;
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
